Fix description's white space

--- a/best-horror-clone/index.css
+++ b/best-horror-clone/index.css
@@ -223,6 +223,7 @@ header.content-header h2 {
 
 header.content-header strong {
   font-weight: normal;
+  white-space: nowrap;
 }
 
 header.content-header div.content-header-description {
